--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,23 @@
-{% extends 'base.html' %} 
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid justify-content-between">
+    <a class="navbar-brand" href="#">RakhaBima</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <form class="container-fluid justify-content-end">
+      <button class="btn btn-danger me-2" type="button">Logout</button>
+    </form>
+  </div>
+</nav>
 <h1>Shopping List Page</h1>
 
 <h5>Name:</h5>
@@ -10,39 +27,41 @@
 <p>{{class}}</p>
 
 <table>
-    <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Description</th>
-        <th>Date Added</th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th>Price</th>
+    <th>Description</th>
+    <th>Date Added</th>
+  </tr>
 
-    {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
-
-    {% for product in products %}
-        <tr>
-            <td>{{product.name}}</td>
-            <td>{{product.price}}</td>
-            <td>{{product.description}}</td>
-            <td>{{product.date_added}}</td>
-        </tr>
-    {% endfor %}
+  {% for product in products %}
+  <tr>
+    <td>{{product.name}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.description}}</td>
+    <td>{{product.date_added}}</td>
+    <td>
+      <a href="{% url 'main:edit_product' product.pk %}">
+        <button>Edit</button>
+      </a>
+      <a href="{% url 'main:delete_product' product.pk %}">
+        <button>Delete</button>
+      </a>
+    </td>
+  </tr>
+  {% endfor %}
 </table>
 
 <br />
 
 <a href="{% url 'main:create_product' %}">
-    <button>
-        Add New Product
-    </button>
+  <button>Add New Product</button>
 </a>
 
 <h5>Sesi terakhir login: {{ last_login }}</h5>
 
 <a href="{% url 'main:logout' %}">
-    <button>
-        Logout
-    </button>
+  <button>Logout</button>
 </a>
 
 {% endblock content %}
